--- a/src/main/resources/templates/register/viewAll.html
+++ b/src/main/resources/templates/register/viewAll.html
@@ -18,6 +18,7 @@
     </thead>
     <tbody>
     <tr th:each="member: ${members}">
+        <td th:text="${member.id}">id</td>
         <td th:text="${member.name}">name</td>
         <td th:text="${member.loginId}">loginId</td>
         <td th:text="${member.address}">address</td>
@@ -25,6 +26,9 @@
     </tr>
     </tbody>
 </table>
+        <button onclick="location.href='index.html'"
+                th:onclick="|location.href='@{/member}'|"
+                type="button">돌아가기</button>
     </div>
 </body>
 </html>
