--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link th:href="@{/css/form.css}"href="../css/form.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>홈페이지</title>
 </head>
 <body>
-<div>
-<button onclick="location.href='addForm.html'"
-        th:onclick="|location.href='@{/member/save}'|"
-        type="button">신규 회원가입</button>
-<button onclick="location.href='viewAll.html'"
-        th:onclick="|location.href='@{/member/all}'|"
-        type="button">회원목록</button>
+<div class="container">
+    <span th:if="${session.loginMember == null}">
+        <h2>회원가입 / 로그인을 진행해주세요.</h2>
+        <button onclick="location.href='addForm.html'"
+                th:onclick="|location.href='@{/member/save}'|"
+                type="button">신규 회원가입</button>
+        <button onclick="location.href='loginForm.html'" th:onclick="|location.href='@{/login}'|"type="button">로그인</button>
+    </span>
+    <span th:if="${session.loginMember != null}">
+       <h2> [<span th:text="${session.loginMember}"></span>]님 환영합니다.</h2>
+        <button onclick="location.href='viewAll.html'"
+                th:onclick="|location.href='@{/member/all}'|"
+                type="button">전체보기</button>
+        <button th:onclick="|location.href='@{/logout}'|" type="button">로그아웃</button>
+    </span>
 </div>
 </body>
 </html>
