--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -26,9 +26,9 @@
     </div>
     <div>
     <button type="submit">제출</button>
-      <button onclick="location.href='index.html'"
-              th:onclick="|location.href='@{/}'|"
-              type="button">취소</button>
+      <button onclick="location.href='index.html'"th:onclick="|location.href='@{/}'|"type="button">취소</button>
+      <button onclick="location.href='idFind.html'"th:onclick="|location.href='@{/find/id}'|"type="button">아이디 찾기</button>
+      <button onclick="location.href='passwordFind.html'"th:onclick="|location.href='@{/find/password}'|"type="button">비밀번호 찾기</button>
     </div>
   </form>
 </div>
