--- a/src/main/resources/templates/register/updateForm.html
+++ b/src/main/resources/templates/register/updateForm.html
@@ -54,7 +54,7 @@
     </div>
     <button type="submit">수정</button>
     <button onclick="location.href='index.html'"
-            th:onclick="|location.href='@{/member}'|"
+            th:onclick="|location.href='@{/member/all}'|"
             type="button">취소</button>
   </form>
 
