--- a/src/main/resources/templates/register/viewAll.html
+++ b/src/main/resources/templates/register/viewAll.html
@@ -32,7 +32,7 @@
 </table>
         <br/>
         <button onclick="location.href='index.html'"
-                th:onclick="|location.href='@{/member}'|"
+                th:onclick="|location.href='@{/}'|"
                 type="button">돌아가기</button>
     </div>
     <button th:onclick="|location.href='@{/logout}'|"
