--- a/src/main/resources/templates/login/find/passwordFind.html
+++ b/src/main/resources/templates/login/find/passwordFind.html
@@ -8,11 +8,25 @@
 <body>
 <div class="container">
     <h2>비밀번호 찾기</h2>
-    <form th:action th:object="${member}" method="post">
-        아이디 : <input type="text" id="loginId" th:field="*{loginId}" placeholder="등록한 아이디를 입력하세요">
-        휴대폰 번호 : <input type="text" id="phoneNumber" th:field="*{phoneNumber}" placeholder="등록한 비밀번호를 입력하세요">
-        <button type="submit">제출</button>
+    <form action="passwordFind_.html" th:action th:object="${member}" method="post">
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="errorMsg" th:each="err : ${#fields.globalErrors()}" th:text="${err}">글로벌 오류 메세지</p>
+        </div>
+
+        <div>
+       <li> 아이디 : <input type="text" id="loginId" th:field="*{loginId}" th:errorclass="field-error" placeholder="등록한 아이디를 입력하세요"></li>
+
+        </div>
+        <div>
+       <li> 휴대폰 번호 : <input type="text" id="phoneNumber" th:field="*{phoneNumber}" th:errorclass="field-error" placeholder="등록한 휴대폰번호를 입력하세요"></li>
+            <div class="field-error" th:errors="*{phoneNumber}">
+                휴대폰번호 오류
+            </div>
+            <button type="submit">제출</button>
+
+        </div>
     </form>
+
 </div>
 </body>
 </html>
