--- a/src/main/resources/templates/register/addForm.html
+++ b/src/main/resources/templates/register/addForm.html
@@ -62,7 +62,7 @@
         </div>
         <button type="submit">상품 등록</button>
         <button onclick="location.href='index.html'"
-                th:onclick="|location.href='@{/member}'|"
+                th:onclick="|location.href='@{/}'|"
                 type="button">등록 취소</button>
     </form>
 
