--- a/src/main/resources/templates/register/addForm.html
+++ b/src/main/resources/templates/register/addForm.html
@@ -35,14 +35,14 @@
                 비밀번호 오류
             </div>
         </div>
-<!--        <div>-->
-<!--            <div>-->
-<!--                비밀번호 확인 : <input type="password" id="passwordCheck" th:field="*{passwordCheck}" th:errorclass="field-error" placeholder="비밀번호 확인">-->
-<!--            </div>-->
-<!--            <div class="field-error" th:errors="*{passwordCheck}">-->
-<!--                비밀번호 오류-->
-<!--            </div>-->
-<!--        </div>-->
+        <div>
+            <div>
+                비밀번호 확인 : <input type="password" id="passwordCheck" th:field="*{passwordCheck}" th:errorclass="field-error" placeholder="비밀번호 확인">
+            </div>
+            <div class="field-error" th:errors="*{passwordCheck}">
+                비밀번호 오류
+            </div>
+        </div>
 
         <div>
             <div>
